# mono-repo

./: Cargo.toml  github_mermaid_fix.asciidoc  readme.asciidoc
rust/: Cargo.toml  readme.asciidoc
rust/vn-ecs/: Cargo.toml  readme.asciidoc
rust/vn-ecs/src/: entity.rs  lib.rs  storage.rs  system.rs  world.rs
rust/vn-ecs/src/collections/: btree.rs  mod.rs  rtree.rs
rust/vn-ecs/src/index/: btree.rs  mod.rs  rtree.rs
rust/vn-farming/: Cargo.toml  readme.asciidoc
rust/vn-farming/vn-farming-logic/: Cargo.toml
rust/vn-farming/vn-farming-logic/src/: lib.rs  logic.rs  map.rs
rust/vn-farming/vn-farming-logic/src/logic/: game_state.rs
rust/vn-farming/vn-farming-logic/src/logic/game_state/: playing.rs  start_menu.rs
rust/vn-farming/vn-farming-native/: Cargo.toml
rust/vn-farming/vn-farming-native/src/: main.rs
rust/vn-farming/vn-farming-web/: Cargo.toml  meta-loader.js
rust/vn-farming/vn-farming-web/src/: helpers.js  lib.rs
rust/vn-farming/vn-farming-web/static/: index.html
rust/vn-scene/: readme.asciidoc
rust/vn-scene/src/: lib.rs
rust/vn-tile-map-editor/: Cargo.toml
rust/vn-tile-map-editor/vn-tile-map-editor-logic/: Cargo.toml
rust/vn-tile-map-editor/vn-tile-map-editor-logic/src/: lib.rs  logic.rs
rust/vn-tile-map-editor/vn-tile-map-editor-logic/src/logic/: game_state.rs  grid.rs
rust/vn-tile-map-editor/vn-tile-map-editor-logic/src/logic/game_state/: editor.rs  load_tile_set_menu.rs  load_tileset_menu.rs  new_layer_menu.rs  ui_helper.rs
rust/vn-tile-map-editor/vn-tile-map-editor-logic/src/logic/game_state/editor/: editor_ui.rs  events.rs  grid.rs  mod.rs  ui.rs
rust/vn-tile-map-editor/vn-tile-map-editor-native/: Cargo.toml
rust/vn-tile-map-editor/vn-tile-map-editor-native/src/: main.rs
rust/vn-tilemap/: Cargo.toml
rust/vn-tilemap/src/: lib.rs  spec.rs  tileset_ui.rs
rust/vn-ui/: Cargo.toml  readme.asciidoc
rust/vn-ui-animation/: Cargo.toml  readme.asciidoc
rust/vn-ui-animation-macros/: Cargo.toml  readme.asciidoc
rust/vn-ui-animation-macros/src/: lib.rs
rust/vn-ui-animation/src/: lib.rs
rust/vn-ui/src/: element.rs  element_world.rs  event_manager.rs  interaction.rs  lib.rs  sizes.rs  utils.rs
rust/vn-ui/src/components/: button.rs  card.rs  empty.rs  hitbox.rs  mod.rs  text_field.rs  texture.rs  tooltip.rs
rust/vn-ui/src/layouts/: anchor.rs  fill.rs  flex.rs  interactive.rs  mod.rs  padding.rs  prefer_size.rs  scroll_area.rs  stack.rs
rust/vn-ui/src/text/: layout.rs
rust/vn-utils/: Cargo.toml  readme.asciidoc
rust/vn-utils/src/: cache.rs  lib.rs
rust/vn-vttrpg/: .gitignore  Cargo.toml  readme.asciidoc
rust/vn-vttrpg/assets/: test_file.txt
rust/vn-vttrpg/vn-vttrpg-logic/: Cargo.toml
rust/vn-vttrpg/vn-vttrpg-logic/src/: lib.rs  logic.rs
rust/vn-vttrpg/vn-vttrpg-native/: Cargo.toml
rust/vn-vttrpg/vn-vttrpg-native/src/: main.rs
rust/vn-vttrpg/vn-vttrpg-web/: Cargo.toml
rust/vn-vttrpg/vn-vttrpg-web/static/: index.html
rust/vn-wgpu-window/: Cargo.toml  readme.asciidoc
rust/vn-wgpu-window/src/: app.rs  errors.rs  lib.rs  pipeline_builder.rs  rendering_context.rs  resource_manager.rs  scene.rs  scene_renderer.rs  texture.rs
rust/vn-wgpu-window/src/logic/: mod.rs
rust/vn-wgpu-window/src/primitives/: color.rs  consts.rs  texture_primitive.rs  transform.rs
rust/vn-wgpu-window/src/shaders/: box_shader.wgsl  texture_shader.wgsl
rust/vn-wgpu-window/src/text/: mod.rs  renderer.rs
vn-scene/: Cargo.toml  readme.asciidoc
vn-ui/: Cargo.toml  readme.asciidoc
vn-ui-animation/: Cargo.toml  readme.asciidoc
vn-ui-animation-macros/: readme.asciidoc
vn-ui/src/: element.rs  event_manager.rs  lib.rs  sizes.rs
vn-ui/src/components/: button.rs  card.rs  hitbox.rs  text_field.rs  tooltip.rs
vn-ui/src/layouts/: anchor.rs  fill.rs  flex.rs  interactive.rs  padding.rs  stack.rs
vn-ui/src/text/: layout.rs
vn-utils/: Cargo.toml  readme.asciidoc
vn-utils/src/: cache.rs  lib.rs
vn-vttrpg/: Cargo.toml  readme.asciidoc
vn-vttrpg-native/: Cargo.toml
vn-vttrpg-native/src/: main.rs
vn-vttrpg-ui/: Cargo.toml
vn-vttrpg-ui-animation/: Cargo.toml
vn-vttrpg-ui-animation-macros/: Cargo.toml
vn-vttrpg-ui-animation-macros/src/: lib.rs
vn-vttrpg-ui-animation/src/: lib.rs
vn-vttrpg-ui/src/: element.rs  event_manager.rs  layout.rs  lib.rs  sizes.rs  utils.rs
vn-vttrpg-ui/src/components/: button.rs  card.rs  hitbox.rs  label.rs  mod.rs  text_area.rs  text_area_input.rs  text_field.rs  text_input.rs  tooltip.rs
vn-vttrpg-ui/src/layouts/: anchor.rs  fill.rs  flex.rs  interactive.rs  mod.rs  padding.rs  stack.rs
vn-vttrpg-ui/src/text/: layout.rs
vn-vttrpg-web/: Cargo.toml  package-lock.json  webpack.config.js
vn-vttrpg-web/js/: index.js
vn-vttrpg-web/src/: helpers.js  lib.rs
vn-vttrpg-web/static/: index.html
vn-vttrpg-window/: Cargo.toml
vn-vttrpg-window/src/: app.rs  graphics.rs  input.rs  lib.rs  logic.rs  pipeline_builder.rs  renderer.rs  rendering_context.rs  resource_manager.rs  scene.rs  scene_renderer.rs  state.rs  texture.rs
vn-vttrpg-window/src/logic/: mod.rs  shader.wgsl  vertex.rs
vn-vttrpg-window/src/primitives/: box_primitive.rs  box_shader.wgsl  color.rs  globals.rs  misc.rs  mod.rs  properties.rs  rect.rs  texture_primitive.rs  transform.rs  vertex.rs
vn-vttrpg-window/src/shaders/: box_shader.wgsl  text_shader.wgsl  texture_shader.wgsl
vn-vttrpg-window/src/text/: font.rs  mod.rs  renderer.rs
vn-vttrpg/src/: lib.rs  logic.rs
vn-vttrpg/vn-vttrpg-logic/: Cargo.toml
vn-vttrpg/vn-vttrpg-logic/src/: lib.rs  logic.rs
vn-vttrpg/vn-vttrpg-native/: Cargo.toml
vn-vttrpg/vn-vttrpg-native/src/: main.rs
vn-vttrpg/vn-vttrpg-web/: Cargo.toml  README.md
vn-vttrpg/vn-vttrpg-web/src/: lib.rs
vn-wgpu-window/: Cargo.toml  readme.asciidoc
vn-wgpu-window/src/text/: mod.rs  (+2 more)
vn-window/: Cargo.toml
vn-window/src/: graphics.rs  input.rs  lib.rs  rendering_context.rs  resource_manager.rs  scene_renderer.rs  texture.rs
vn-window/src/primitives/: box_primitive.rs  color.rs  globals.rs  properties.rs  rect.rs  texture_primitive.rs  transform.rs
vn-window/src/text/: font.rs  mod.rs
(+5 files in other folders)
