[workspace]
resolver = "3"
members = [
    "vn-wgpu-window",
    "vn-ui",
    "vn-utils",
    "vn-ui-animation",
    "vn-ui-animation-macros",
    "vn-scene", "vn-ecs",
]

[workspace.dependencies]
log = "0.4.29"
winit = "0.30.12"
anyhow = "1.0.100"
wgpu = { version = "28.0.0" }
env_logger = "0.11.8"
pollster = "0.4.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.106"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = [
    "Document",
    "Window",
    "Element",
    "Request",
    "RequestInit",
    "Response",
] }
js-sys = "0.3.83"
bytemuck = "1.24.0"
image = { version = "0.25.9", default-features = false }
thiserror = "2.0.17"
web-time = "1.1.0"
ttf-parser = "0.25.1"
rand = { version = "0.9.2" }
getrandom = { version = "0.3.4", default-features = false, features = ["wasm_js"] }
proc-macro2 = "1.0.104"
syn = "2.0.112"
quote = "1.0.42"
