[package]
name = "vn-vttrpg-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
vn-vttrpg-window = { path = "../vn-vttrpg-window" }
vn-utils = { path = "../vn-utils" }
web-time = { workspace = true }
# ide marks it as unused, but it is very much used by rand
getrandom = { workspace = true, features = ["wasm_js"] }
rand = { workspace = true }

[features]
debug_outlines = []