[package]
name = "vn-vttrpg-window"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
winit = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { workspace = true }
pollster = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl"] }
wasm-bindgen = { workspace = true}
wasm-bindgen-futures = { workspace = true}
web-sys = { workspace = true}

