[package]
name = "vn-vttrpg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug_outlines = ["vn-vttrpg-ui/debug_outlines"]

[dependencies]
vn-vttrpg-window = { path = "../vn-vttrpg-window" }
vn-vttrpg-ui = { path = "../vn-vttrpg-ui" }
vn-vttrpg-ui-animation = { path = "../vn-vttrpg-ui-animation" }
vn-utils = { path = "../vn-utils" }
log = { workspace = true }
anyhow = { workspace = true }
winit = { workspace = true }
web-time = { workspace = true }

