[package]
name = "vn-vttrpg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
debug_outlines = ["vn-ui/debug_outlines"]

[dependencies]
vn-scene = { path = "../vn-scene" }
vn-window = { path = "../vn-window" }
vn-ui = { path = "../vn-ui" }
vn-utils = { path = "../vn-utils" }
log = { workspace = true }
anyhow = { workspace = true }
winit = { workspace = true }
web-time = { workspace = true }
thiserror = { workspace = true }

