[package]
name = "vn-window"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vn-scene = { path = "../vn-scene" }
vn-utils = { path = "../vn-utils" }
log = { workspace = true }
winit = { workspace = true }
anyhow = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"], default-features = false }
thiserror = { workspace = true }
web-time = { workspace = true }
ttf-parser = "0.25.0"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

