[package]
name = "vn-vttrpg-web"
version = "0.1.0"
authors = ["Voided Name"]
categories = ["wasm"]
edition = "2024"

[features]
debug_outlines = ["vn-vttrpg-logic/debug_outlines"]

[lib]
crate-type = ["cdylib"]
#
#[profile.release]
#lto = true

[dependencies]
vn-vttrpg-logic = { path = "../vn-vttrpg-logic" }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
anyhow = { workspace = true }